pueue/TODO
   Compiling pueue-lib v0.26.1 (/scratch/wip/pueue/work/pueue-3.4.1/pueue_lib)
error[E0583]: file not found for module `platform`
  --> pueue_lib/src/process_helper/mod.rs:25:1
   |
25 | mod platform;
   | ^^^^^^^^^^^^^
   |
   = help: to create the module `platform`, create file "pueue_lib/src/process_helper/platform.rs" or "pueue_lib/src/process_helper/platform/mod.rs"
   = note: if there is a `mod platform` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused import: `self::platform::*`
  --> pueue_lib/src/process_helper/mod.rs:26:9
   |
26 | pub use self::platform::*;
   |         ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0583`.
warning: `pueue-lib` (lib) generated 1 warning
error: could not compile `pueue-lib` (lib) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
*** Error code 101
